Add redux. Add comments whith about redux work
